@@ -4,6 +4,10 @@ Flusspferd Change Log
 Release 0.7
 -----------
 
+2009-06-13:
+- Some plugins can now be enabled/disabled (PLUGIN_XXX) and required
+  (FORCE_PLUGINS) in cmake.
+
 2009-06-12:
 - Lower-case module names for included modules (it remains case-sensitive).
 - FLUSSPFERD_LOADER gets passed the context object as its second parameter.
